Implement backend auth and frontend api connection

--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   },
   "dependencies": {
     "@google/genai": "^1.30.0",
+    "bcryptjs": "^3.0.3",
     "clsx": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "git": "^0.1.5",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.344.0",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
